# Academic

./: desktop.ini
3rd SEM/CO221/: phase1_groupB10.pdsprj
3rd SEM/CO222/: 14403Project1.c  14403consolidation_session02.c  e14403_lab09.c
3rd SEM/CO222/Lab 03/: 14403lab03.c
3rd SEM/CO222/Lab 08/: prog  step  step1.c  step2  step2.c  step3.c  test  test.c  web  web.c  web.txt
3rd SEM/CO222/lab 09/: 14403lab09.c  lab09_1.c
3rd SEM/CO222/lab01/: 14403lab01.c
3rd SEM/CO222/lab02/: 14403lab02.c
3rd SEM/CO222/lab04/: 14403lab04.c  CC.c  Un.c  skeleton.c  t2.c
3rd SEM/CO222/lab05/: 14403lab05.c
4th SEM/CO224/Lab03/: ex1.s  ex2.s  ex3.s  ex4.s  un  un.s
4th SEM/CO224/Lab04/: e  ex  example01  lab04_01.s  lab04_02.s
4th SEM/CO224/Lab1-Material/: ex1  ex1.s  ex2  ex2.s  ex3  ex3.s  ex4  ex4.s  sample  sample.s
4th SEM/CO224/Processor/: E14009_E14403_Lab04.v  Lab4.v  alu  alu.vvp  alu1.vvp  connect.v  pro  register (2).v  register.v  wavedata.vcd
4th SEM/CO224/lab/: lab.txt
4th SEM/CO224/lab2/: .ex4.s.swp  ex4  ex4.s  ex5  ex5.s
4th SEM/CO224/lab2-II/: ex01.s  ex02.s  ex03.s
4th SEM/CO225/CPU implementation/: Controller.java  Instruction.java  RAM.java  TestCPU.java  TestReg.java  TestRegFile.java
4th SEM/CO225/Lab01/: Main.java  Student.java  co225-classlist.txt  import java.java  import.java
4th SEM/CO225/Lab04/: contact.java  (+3 more)
4th SEM/EE285/: BJT_Amplifier_configurations.pptx  BJT_biasing_ppt.pptx
5th SEM/CO321/: time  time.c
5th SEM/CO321/Lab/lab8/lab/: CMakeLists.txt  ex2.c  keypadtest.c  myutils.h
6th SEM/CO326/: client.c  server.c
(+419 files in other folders)
